--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
       "stop": "pm2 stop DANUWA-MD",
      "restart": "pm2 restart DANUWA-MD"
     },
-  "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.17",
-    "qrcode": "^1.5.3",
-    "awesome-phonenumber": "^2.64.0",
-    "pino": "^8.1.0",
-    "phone" : "3.1.30",
-    "body-parser": "^1.20.1",
-    "express": "^4.18.1",
-    "path": "^0.12.7",
-    "megajs": "^1.1.0",
-    "pm2": "^5.2.0"
-   }
+ "dependencies": {
+  "@whiskeysockets/baileys": "^6.7.17",
+  "qrcode": "^1.5.4",
+  "awesome-phonenumber": "^6.8.0",
+  "pino": "^9.5.0",
+  "phone": "^3.1.32",
+  "body-parser": "^1.20.3",
+  "express": "^4.21.1",
+  "path": "^0.12.7",
+  "megajs": "^1.3.1",
+  "pm2": "^5.4.2"
 }
