--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-"name": "web-pair",
-    "version": "0.0.1",
-    "description": "A multi functional whatsapp bot Web paircode.",
-    "main": "index.js",
-    "scripts": {
-      "start": "pm2 start index.js --deep-monitoring --attach --name DANUWA-MD",
-      "stop": "pm2 stop DANUWA-MD",
-     "restart": "pm2 restart DANUWA-MD"
-    },
- "dependencies": {
- "@whiskeysockets/baileys": "^6.7.18",
-  "qrcode": "^1.5.4",
-  "awesome-phonenumber": "^6.8.0",
-  "pino": "^9.5.0",
-  "phone": "^3.1.32",
-  "body-parser": "^1.20.3",
-  "express": "^4.21.1",
-  "path": "^0.12.7",
-  "megajs": "^1.3.1",
-  "pm2": "^5.4.2"
+  "name": "web-pair",
+  "version": "0.0.2",
+  "description": "A multi-functional WhatsApp bot using Web pair code.",
+  "main": "index.js",
+  "scripts": {
+    "start": "pm2 start index.js --deep-monitoring --attach --name DANUWA-MD",
+    "stop": "pm2 stop DANUWA-MD",
+    "restart": "pm2 restart DANUWA-MD"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.19",
+    "qrcode": "^1.5.4",
+    "awesome-phonenumber": "^6.8.1",
+    "pino": "^9.6.0",
+    "phone": "^3.1.35",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2",
+    "path": "^0.12.7",
+    "megajs": "^1.3.2",
+    "pm2": "^5.4.3"
+  }
 }
